src/app/real-ws/variants/graph-variant-traces/graph-variant-traces.component.scss
@import url("https://fonts.googleapis.com/icon?family=Material+Icons");

.graph-traces-container {
  display: flex;
  flex-direction: column;
  top: 0;
  left: 0;
  right: 0;
}

#chart > div > svg > g > text {
  font-size: 8pt;
  fill: #272727;
}

#chart > div > svg > g {
  cursor: pointer;
}

.div-custom-padding {
  height: 12px;
}
/*
.mat-chip.mat-standard-chip.mat-chip-selected.mat-primary {
  border: 1px solid #c5cdf1;
  color: #3f51b5;
  background-color: #f4f2fd ;
  font-family: "SansSerif";
}

.mat-chip.mat-standard-chip {
  border: 1px solid #BDBDBD;
  color: #616161;
  background-color: #FFFFFF;
  font-family: "SansSerif";
  cursor: pointer;
}*/

.mat-chip:focus, .mat-chip:active:focus, .mat-chip:active:focus {
  outline: none !important;
}

.mat-grid-list {
  height: 100%;
}

.mat-toolbar.mat-toolbar-single-row{
  margin: 0px;
  padding: 0px;
  height: fit-content;
}

.vertical-divider {
  border-left: 1px solid rgba(244, 244, 244, 0.46);
  background: #828282;
  width: 1px;
  margin-left: 30px;
  margin-right: 30px;
  height: 30px;
}

.chart-container {
  width: 100%;
  padding: 10px;
  overflow-y: auto;
  position: relative;
  display: flex;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  flex-direction: row;
}

.movable-box {
  width: 200px;
  height: 200px;
  padding: 10px 10px 10px 0px;
  box-sizing: border-box;
  border: solid 1px #ccc;
  color: rgba(0, 0, 0, 0.87);
  text-align: center;
  background: #fff;
  border-radius: 4px;
  position: relative;
  transition: box-shadow 200ms cubic-bezier(0, 0, 0.2, 1);
  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
  0 2px 2px 0 rgba(0, 0, 0, 0.14),
  0 1px 5px 0 rgba(0, 0, 0, 0.12);
  display: flex;
  flex-direction: column;
}

.movable-box:active {
  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
  0 8px 10px 1px rgba(0, 0, 0, 0.14),
  0 3px 14px 2px rgba(0, 0, 0, 0.12);
}

.movable-box--content {
  position: relative;
  left: 0;
  top: 0;
  padding: 10px;
}

.movable-box--handler {
  position: absolute;
  top: 0;
  background-color: #d6d6d6;
  cursor: move;
  width: 100%;
  height: 10px;
}

#chartBox {
  width: 60%;
  height: fit-content;
  position: relative;
  overflow: auto;
  z-index: 5;
}

#legendBox {
  width: 500px;
  position: relative;
  text-align: left;
  z-index: 30;
  height: fit-content;
  min-height: 200px;
  overflow: auto;
}

#caseBox {
  width: 40%;
  height: fit-content;
  min-height: 200px;
  position: relative;
  z-index: 10;
}

